--- a/css/style.css
+++ b/css/style.css
@@ -8,10 +8,13 @@ body{
 }
 .container{
     display: flex;
-    margin-top: 80px;
-    margin-left: 370px;
-    max-width: 700px;
-    height: 500px;
+    justify-content: center;
+    align-items: center;
+    margin-top: 30px;
+    margin-right: 150px;
+    margin-left: 150px;
+    max-width: 100%;
+    height: 90vh;
     background-color: white;
 }
 
@@ -19,24 +22,25 @@ body{
     margin-right: 20px;
 }
 .image > img{
-    width: 200px;
-    height: 180px;
-    margin-left: 90px;
-    border-radius: 100%;
-    margin-top: 150px;
+    width: 300px;
+    height: 280px;
+    /* margin-left: 90px; */
+    /* border-radius: 100%; */
+    /* margin-top: 100px; */
 
 }
 
 .fom{
-    margin-top: 100px;
-    margin-left: 30px;
+    /* margin-top: 120px; */
+    margin-left: 90px;
 }
 
 
 
 form > h3{
     text-align: center;
-    margin-bottom: 20px;
+    margin-bottom: 40px;
+    font-size: xx-large;
 }
 .box_input2{
     background-color: aliceblue;
@@ -98,16 +102,17 @@ p{
     text-align: center;
 }
 
-@media screen and (max-width: 480px) and (min-width: 365px) {
+/* @media screen and (max-width: 480px) and (min-width: 365px) { */
+@media screen and (max-width: 768px) and (min-width: 365px) {
     body{
         background-color: white;
         align-items: center;
         justify-content: center;
     }
     .container{
-        display: block;
-        margin-left: 50px;
-        width: 300px;
+        display: flex;
+        /* margin-left: 50px; */
+        /* width: 100%; */
         align-items: center;
         justify-content: center;
     }
@@ -123,7 +128,7 @@ p{
    margin-left: 0px;
    margin-right: 40px;
 }
-.box_input2  > input{
+/* .box_input2  > input{
    margin: auto;
     width: 210px;
     outline: none;
@@ -136,5 +141,5 @@ p{
      margin-top: -23px;
      width: 80px;
      height: 90px;
- }
+ } */
 }
